src/Menu.css
.Menu {
    width: 100vw;
    height: 100vh;
    box-sizing: border-box;
    z-index: 100;
    background-color: transparent;
    padding-left: 25pt;
    list-style: none;
    overflow-y: auto;
    padding-top: 50vh;
    padding-bottom: 50vh;
    scroll-snap-type: y mandatory;
}

.Menu li {
    scroll-snap-align: center;
    opacity: 0.2;
    transition: opacity 0.2s;
    margin-bottom: -10px;
}

.Menu li.active {
    opacity: 1;
    transform-origin: left center;
}

.Menu a {
    font-weight: bold;
    cursor: pointer;
    color: inherit;
    text-decoration: inherit;
    text-transform: capitalize;
    display: inline-block;
    line-height: 0.8;
}

@media (pointer: fine) {
    .Menu a {
        font-size: 90px;
        padding-left: 50px;
        text-indent: -50px;
    }
    .Menu li.active {
        transform: scale(1.4);
    }
}

@media (pointer: coarse) {
    .Menu a {
        font-size: 42px;
        padding-left: 30px;
        text-indent: -30px;
    }
    .Menu li.active {
        transform: scale(1.25);
    }
}

